--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   },
   "homepage": "https://github.com/antonsamper/hapi-cron#readme",
   "devDependencies": {
-    "eslint": "^6.0.0",
     "@hapi/eslint-config-hapi": "^12.1.0",
     "@hapi/eslint-plugin-hapi": "^4.3.3",
     "@hapi/hapi": "^18.3.1",
+    "eslint": "^6.0.0",
     "jest": "^24.8.0"
   },
   "dependencies": {
-    "cron": "^1.7.1",
-    "@hapi/hoek": "^7.2.0"
+    "@hapi/hoek": "^7.2.0",
+    "cron": "^1.7.1"
   },
   "engines": {
     "node": ">=8.0.0"
