--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapi-cron",
+  "name": "@blackfisk-tech/hapi-cron",
   "version": "1.0.6",
   "description": "A Hapi plugin to setup cron jobs that will call predefined server routes at specified times",
   "main": "lib/index.js",
