--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@blackfisk-tech/hapi-cron",
+  "name": "@blackfisk/hapi-cron",
   "version": "1.0.7",
+  "access": "private",
   "description": "A Hapi plugin to setup cron jobs that will call predefined server routes at specified times",
   "main": "lib/index.js",
   "scripts": {
